Starting player selection section

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="styles.css">
+    <script defer src="script.js"></script>
     <title>POKEFUTBOL</title>
 </head>
 <body>
@@ -17,6 +17,7 @@
         <label for="maguire"><input type="radio" name="player" id="maguire">Harry Maguire</label>
         <label for="enzo"><input type="radio" name="player" id="enzo">Enzo Fernandez</label>
         <label for="jordi"><input type="radio" name="player" id="jordi">Jordi Alba</label>
+        <button id="player_selectbutton">Seleccionar</button>
     </section>
     <section id="attack_selection">
         <p>Tu jugador tiene <span>3</span> vidas</p>
@@ -35,5 +36,4 @@
         <button>Reiniciar</button>
     </section>
 </body>
-<script src="script.js"></script>
 </html>
