Updates in player selection stage

--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
         <button id="player_selectbutton">Seleccionar</button>
     </section>
     <section id="attack_selection">
-        <p>Tu jugador tiene <span>3</span> vidas</p>
-        <p>El jugador de tu contrincante tiene <span>3</span> vidas</p>
+        <p>Tu jugador tiene <span id="player_lives">3</span> vidas</p>
+        <p>El jugador de tu contrincante tiene <span id="pc_lives">3</span> vidas</p>
         <h2>Elige tu ataque:</h2>
         <div class="buttons">
             <button id="shoot_button">Disparo ⚽️</button>
