Working on attack selection

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <label for="neymar"><input type="radio" name="player" id="neymar">Neymar</label>
         <label for="maguire"><input type="radio" name="player" id="maguire">Harry Maguire</label>
         <label for="enzo"><input type="radio" name="player" id="enzo">Enzo Fernandez</label>
-        <label for="jordi"><input type="radio" name="player" id="jordi">Jordi Alba</label>
+        <label for="suarez"><input type="radio" name="player" id="suarez">Luis Suarez</label>
         <button id="player_selectbutton">Seleccionar</button>
     </section>
     <section id="attack_selection">
@@ -30,7 +30,7 @@
         </div>
     </section>
     <section id="messages">
-        <p>Tu jugador atacó con <span>DISPARO</span>, el oponente atacó con Regate - <span>GANASTE 🎉</span></p>
+        <p>Tu jugador <span id="p1_player"></span> atacó con <span id="player_attack"></span>, el oponente <span id="pc_player"></span> atacó con <span id="pc_attack"></span> - <span>GANASTE 🎉</span></p>
     </section>
     <section id="reset">
         <button>Reiniciar</button>
