Battle function ready

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         </div>
     </section>
     <section id="messages">
-        <p>Tu jugador <span id="p1_player"></span> atacó con <span id="player_attack"></span>, el oponente <span id="pc_player"></span> atacó con <span id="pc_attack"></span> - <span>GANASTE 🎉</span></p>
+        <p>Tu jugador <span id="p1_player"></span> atacó con <span id="player_attack"></span>, el oponente <span id="pc_player"></span> atacó con <span id="pc_attack"></span> - <span id="result"></span></p>
     </section>
     <section id="reset">
         <button>Reiniciar</button>
