Now the game finishes after you ran out of lives

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         <p>Tu jugador <span id="p1_player"></span> atacó con <span id="player_attack"></span>, el oponente <span id="pc_player"></span> atacó con <span id="pc_attack"></span> - <span id="result"></span></p>
     </section>
     <section id="reset">
-        <button>Reiniciar</button>
+        <button id="restart_button" onclick="restartGame()">Reiniciar</button>
     </section>
 </body>
 </html>
