Changes in title

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <title>POKEFUTBOL</title>
 </head>
 <body>
-    <h1>POKEFUTBOL! ⚽️</h1>
+    <h1>FUTBOL! ⚽️</h1>
     <section id="player_selection">
         <h2>Elige tu jugador:</h2>
         <label for="bounou"><input type="radio" name="player" id="bounou">Yassine Bounou</label>
