changes in head

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
     <script defer src="script.js"></script>
-    <title>POKEFUTBOL</title>
+    <title>FUTBOL - Un juego inspirado en Piedra, Papel o Tijera</title>
 </head>
 <body>
     <h1>FUTBOL! ⚽️</h1>
