--- a/index.html
+++ b/index.html
@@ -1,40 +1,71 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="styles.css">
-    <script defer src="script.js"></script>
-    <title>FUTBOL - Un juego inspirado en Piedra, Papel o Tijeragi</title>
-</head>
-<body>
-    <h1>FUTBOL! ⚽️</h1>
-    <section id="player_selection">
-        <h2>Elige tu jugador:</h2>
-        <label for="bounou"><input type="radio" name="player" id="bounou">Yassine Bounou</label>
-        <label for="mbappe"><input type="radio" name="player" id="mbappe">Kylian Mbappe</label>
-        <label for="neymar"><input type="radio" name="player" id="neymar">Neymar</label>
-        <label for="maguire"><input type="radio" name="player" id="maguire">Harry Maguire</label>
-        <label for="enzo"><input type="radio" name="player" id="enzo">Enzo Fernandez</label>
-        <label for="suarez"><input type="radio" name="player" id="suarez">Luis Suarez</label>
-        <button id="player_selectbutton" onclick="changeDisplay(attack_selection)">Seleccionar</button>
-    </section>
-    <section id="attack_selection">
-        <p>Tu jugador tiene <span id="player_lives">3</span> vidas</p>
-        <p>El jugador de tu contrincante tiene <span id="pc_lives">3</span> vidas</p>
-        <h2>Elige tu ataque:</h2>
-        <div class="buttons">
-            <button id="shoot_button" onclick="changeDisplay(messages)">Disparo ⚽️</button>
-            <button id="speed_button" onclick="changeDisplay(messages)">Velocidad ⚽️</button>
-            <button id="defense_button" onclick="changeDisplay(messages)">Defensa ⚽️</button>
-        </div>
-    </section>
-    <section id="messages">
-        <p>Tu jugador <span id="p1_player"></span> atacó con <span id="player_attack"></span>, el oponente <span id="pc_player"></span> atacó con <span id="pc_attack"></span> - <span id="result"></span></p>
-    </section>
-    <section id="reset">
-        <button id="restart_button" onclick="restartGame()">Reiniciar</button>
-    </section>
-</body>
+<html>
+    <head>
+        <meta charset="utf-8" />
+        <title>MOKEPON!</title>
+        <script src="/script.js"></script>
+        <link rel="stylesheet" href="/styles.css">
+    </head>
+    <body>
+        <section id="seleccionar-mascota">
+            <h1 class="titulo">Mokepon</h1>
+
+            <h2 class="subtitulo">Elige tu mascota:</h2>
+
+            <div class="tarjetas">
+                <input type="radio" name="mascota" id="hipodoge" />
+                <label class="tarjeta-de-mokepon" for="hipodoge">
+                    <p>Hipodoge</p>
+                    <img src="/img/hipodoge.png" alt="Hipodoge">
+                </label>
+                
+                <input type="radio" name="mascota" id="capipepo" />
+                <label class="tarjeta-de-mokepon" for="capipepo">
+                    <p>Capipepo</p>
+                    <img src="/img/capipepo.png" alt="Capipepo">
+                </label>
+
+                <input type="radio" name="mascota" id="ratigueya" />
+                <label class="tarjeta-de-mokepon" for="ratigueya">
+                    <p>Ratigueya</p>
+                    <img src="/img/ratigueya.png" alt="Ratigueya">
+                </label>
+            </div>
+
+            <button id="boton-mascota">Seleccionar</button>
+        </section>
+
+        <section id="seleccionar-ataque">
+            <h1 class="titulo">Mokepon</h1>
+
+            <h2 class="subtitulo">Elige tu ataque:</h2>
+
+            <div class="tarjetas-ataques">
+                <button id="boton-fuego" class="boton-de-ataque">Fuego 🔥</button>
+                <button id="boton-agua" class="boton-de-ataque">Agua 💧</button>
+                <button id="boton-tierra" class="boton-de-ataque">Tierra 🌱</button>
+            </div>
+
+            <div id="mensajes">
+                <p id="resultado">Mucha suerte</p>
+
+                <section id="reiniciar">
+                    <button id="boton-reiniciar">Reiniciar</button>
+                </section>
+            </div>
+
+            <div class="ataques">
+                <div class="ataques-jugador">
+                    <p id="vidas-jugador">3</p>
+                    <p id="mascota-jugador"></p>
+                    <div id="ataques-del-jugador"></div>
+                </div>
+                <div class="ataques-enemigo">
+                    <p id="vidas-enemigo">3</p>
+                    <p id="mascota-enemigo"></p>
+                    <div id="ataques-del-enemigo"></div>
+                </div>
+            </div>
+        </section>
+    </body>
 </html>
