--- a/index.html
+++ b/index.html
@@ -11,24 +11,7 @@
 
             <h2 class="subtitulo">Elige tu mascota:</h2>
 
-            <div class="tarjetas">
-                <input type="radio" name="mascota" id="hipodoge" />
-                <label class="tarjeta-de-mokepon" for="hipodoge">
-                    <p>Hipodoge</p>
-                    <img src="/img/hipodoge.png" alt="Hipodoge">
-                </label>
-                
-                <input type="radio" name="mascota" id="capipepo" />
-                <label class="tarjeta-de-mokepon" for="capipepo">
-                    <p>Capipepo</p>
-                    <img src="/img/capipepo.png" alt="Capipepo">
-                </label>
-
-                <input type="radio" name="mascota" id="ratigueya" />
-                <label class="tarjeta-de-mokepon" for="ratigueya">
-                    <p>Ratigueya</p>
-                    <img src="/img/ratigueya.png" alt="Ratigueya">
-                </label>
+            <div id="contenedor_tarjetas" class="tarjetas">
             </div>
 
             <button id="boton-mascota">Seleccionar</button>
