--- a/index.html
+++ b/index.html
@@ -3,15 +3,16 @@
     <head>
         <meta charset="utf-8" />
         <title>MOKEPON!</title>
-        <link rel="stylesheet" href="/styles.css">
+        <link rel="stylesheet" href="styles.css"> 
     </head>
     <body>
         <section id="seleccionar-mascota">
-            <h1 class="titulo">Mokepon</h1>
+            <h1 class="titulo">Mokepono</h1> 
 
             <h2 class="subtitulo">Elige tu mascota:</h2>
 
-            <div id="contenedor_tarjetas" class="tarjetas">
+            <div id='contenedorTarjetas' class="tarjetas">
+                
             </div>
 
             <button id="boton-mascota">Seleccionar</button>
@@ -22,10 +23,8 @@
 
             <h2 class="subtitulo">Elige tu ataque:</h2>
 
-            <div class="tarjetas-ataques">
-                <button id="boton-fuego" class="boton-de-ataque">Fuego 🔥</button>
-                <button id="boton-agua" class="boton-de-ataque">Agua 💧</button>
-                <button id="boton-tierra" class="boton-de-ataque">Tierra 🌱</button>
+            <div id='contenedorAtaques' class="tarjetas-ataques">
+
             </div>
 
             <div id="mensajes">
@@ -49,6 +48,6 @@
                 </div>
             </div>
         </section>
-    <script src="/script.js"></script>
+        <script src="script.js"></script>
     </body>
 </html>
