--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@
     <head>
         <meta charset="utf-8" />
         <title>MOKEPON!</title>
-        <link rel="stylesheet" href="styles.css"> 
+        <link rel="stylesheet" href="./styles.css"> 
     </head>
     <body>
         <section id="seleccionar-mascota">
-            <h1 class="titulo">Mokepono</h1> 
+            <h1 class="titulo">Mokepon</h1> 
 
             <h2 class="subtitulo">Elige tu mascota:</h2>
 
@@ -16,6 +16,15 @@
             </div>
 
             <button id="boton-mascota">Seleccionar</button>
+        </section>
+
+        <section id="ver-mapa">
+            <h1 class="titulo">Recorre el mapa con tu mokepon</h1> 
+            <canvas id="mapa"></canvas>
+            <button onClick="moverArriba()">Arriba</button>
+            <button onClick="moverIzquierda()">Izquierda</button>
+            <button onClick="moverAbajo()">Abajo</button>
+            <button onClick="moverDerecha()">Derecha</button>
         </section>
 
         <section id="seleccionar-ataque">
@@ -37,12 +46,12 @@
 
             <div class="ataques">
                 <div class="ataques-jugador">
-                    <p id="vidas-jugador">3</p>
+                    <p id="vidas-jugador">0</p>
                     <p id="mascota-jugador"></p>
                     <div id="ataques-del-jugador"></div>
                 </div>
-                <div class="ataques-enemigo">
-                    <p id="vidas-enemigo">3</p>
+                <div class="ataques-enemigo">   
+                    <p id="vidas-enemigo">0</p>
                     <p id="mascota-enemigo"></p>
                     <div id="ataques-del-enemigo"></div>
                 </div>
