--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8" />
         <title>MOKEPON!</title>
-        <link rel="stylesheet" href="./styles.css"> 
+        <link rel="stylesheet" href="styles.css"> 
     </head>
     <body>
         <section id="seleccionar-mascota">
@@ -55,6 +55,6 @@
                 </div>
             </div>
         </section>
-        <script src="./js/mokepon.js"></script>
+        <script src="script.js"></script>
     </body>
 </html>
